fix: fixing button alignment

--- a/frontend/src/components/SubmenuLivros/index.scss
+++ b/frontend/src/components/SubmenuLivros/index.scss
@@ -1,37 +1,37 @@
-
-.submenu{        
-    display: flex;        
-    padding:0px 140px;
+.submenu {
+    display: flex;
+    padding: 0px 140px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    
-    ul{
+
+    ul {
         width: 100%;
         list-style: none;
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
 
-        li{                 
-            margin:10px;            
+        li {
+            margin: 10px;
+            text-align: center;
         }
 
-        a{   
-            background-color: rgb(36, 0, 238);        
+        a {
+            background-color: rgb(36, 0, 238);
             border-radius: 5px;
-            padding:10px;            
+            padding: 10px;
             display: flex;
-            width:100%;
+            width: 100%;
             height: 100%;
             text-decoration: none;
             font-weight: bold;
-            color:white;                        
+            color: white;
         }
 
-        a:hover{
-            opacity: 0.5;   
+        a:hover {
+            opacity: 0.5;
         }
     }
 
-    
+
 }
